--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
