--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.2
   animated_splash_screen: ^1.3.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
